image placement and several fixes

--- a/oTree/captcha/templates/captcha/Decision.html
+++ b/oTree/captcha/templates/captcha/Decision.html
@@ -75,7 +75,7 @@
         <strong> If you are selected as the "decision maker", the percentage you decide to take from other participants will be subtracted from the earnings of the other participants in your group, and will be added to your final payment. </strong>
       </p>
       <ul>
-        <li class="m-2">  Only one participant in the group will be selected as the decision maker randomly and the earnings will be redustributed according to the decision maker's choice.  The choices by the others will not affect the final earnings. </li>
+        <li class="m-2">  Only one participant in the group will be selected as the decision-maker. The choices by the others will not affect the final earnings. </li>
         <li class="m-2"> The others will not know whether you are selected as the decision maker, or the percentage you have chosen.</li>
         <li  class="m-2"> The final earnings will be visible in the results page{% if session.config.competition %} and they will determine the ranking of the players in the group{% endif %}.
         </li>
