--- a/oTree/captcha_individual/templates/captcha_individual/Instructions1.html
+++ b/oTree/captcha_individual/templates/captcha_individual/Instructions1.html
@@ -13,7 +13,7 @@ Welcome
   The study will last roughly 2 minutes. We kindly ask you to not to switch tabs during the experiment and turn off all sources of distraction (e. g., your mobile phone) so that you can concentrate on the task.
 </p>
 <p>
-  In addition to the participation fee, during the task, you might earn money in GBP to be paid as bonus payment.
+  In addition to the participation fee, during the task, you might earn money in British Pounds(£) to be paid as bonus payment.
 </p>
 
 {% next_button %}
