--- a/oTree/instructions/templates/instructions/Instructions.html
+++ b/oTree/instructions/templates/instructions/Instructions.html
@@ -22,6 +22,38 @@
        text-color: #000000;                  // Changes text color
    }
   </style>
+  <style>
+   #compimage {
+       border: 1px solid #ddd;
+       border-radius: 4px;
+       padding: 5px;
+       width: 80%;
+   }
+   #compimagesmall {
+       border: 1px solid #ddd;
+       border-radius: 4px;
+       padding: 5px;
+       width: 60%;
+   }
+   #contimage {
+       border: 1px solid #ddd;
+       border-radius: 4px;
+       padding: 5px;
+       width: 80%;
+   }
+   #contimagesmall {
+       border: 1px solid #ddd;
+       border-radius: 4px;
+       padding: 5px;
+       width: 60%;
+   }
+   #effortimage {
+       border: 1px solid #ddd;
+       border-radius: 4px;
+       padding: 5px;
+       width: 50%;
+   }
+  </style>
 
 <!-- 
   <style>
@@ -98,7 +130,7 @@
         <span style="font-weight: bold">
           <span class="otree-timer__time-left"></span></br>
         </span>
-        Please do not forget to click <kbd>Start Experiment</kbd> button in the last page once you finish the instructions.
+        Please do not forget to click <kbd>Start Experiment</kbd> button on the last page once you finish the instructions.
 
     </p>
 </div>
