--- a/oTree/instructions/templates/instructions/i2.html
+++ b/oTree/instructions/templates/instructions/i2.html
@@ -27,7 +27,10 @@ The group members
 {% endif %}
 will be three other Prolific participants who are currently taking this study. 
 </p>
-
+<p>
+You interaction will be completely anonymous and we will not conceal any personal information betwen participants neither during nor after the study. During the study, each participant will be named as one of the following: <em>Player J</em>, <em>Player K</em>, <em>Player L</em>, and <em>Player M</em> by chance.
+</p>
+<br>
 <p>Please note: You might need to wait a few minutes after instructions for other participants to join.</p>
 
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
