--- a/oTree/instructions/templates/instructions/i5.html
+++ b/oTree/instructions/templates/instructions/i5.html
@@ -1,3 +1,5 @@
+{% load otree static %}
+
 <br>
 <div class="card-header bg-transparent mainheader">
   <h3 class="card-title font-weight-bold mt-3 mb-3">
@@ -7,9 +9,13 @@
 
 <br>
 <p>
-  For each captcha you entered correctly, you will collect <strong>0.10 GBP</strong> strong The task will last<strong> 90 seconds</strong>. 
-
+  For each captcha you entered correctly, you will collect <strong>£0.10</strong>. The task will last<strong> 90 seconds</strong>. 
 </p>
+<figure>
+  <img id="effortimage" src="{% static 'instructions/effort_task.png' %}"><br>
+  <figurecaption> An example from the Effort Stage </figurecaption>
+</figure>
+
 
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
 
