--- a/oTree/instructions/templates/instructions/i8.html
+++ b/oTree/instructions/templates/instructions/i8.html
@@ -1,3 +1,5 @@
+{% load otree static %}
+
 <br>
 <div class="card-header bg-transparent mainheader">
   <h3 class="card-title font-weight-bold mt-3 mb-3">
@@ -16,6 +18,18 @@
   {% endif %}
   (See example below.) 
 </p>
+
+<div>
+  <figure>
+    {% if session.config.competition %}
+      <img id="compimagesmall" src="{% static 'instructions/results_competition.png' %}"><br>
+
+    {% else %}
+      <img id="contimagesmall" src="{% static 'instructions/results_control.png' %}"><br>
+    {% endif %}
+    <figcaption> <small>Screenshot from the Feedback stage. Payment information are concealed. Player names are an example.</small></figcaption>
+  </figure>
+</div>
 
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
 
