--- a/oTree/prolific_id/templates/prolific_id/ProlificID.html
+++ b/oTree/prolific_id/templates/prolific_id/ProlificID.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <p>
-Please enter your Prolific ID. Your Prolific ID should consists of 24 alphanumeric characters.
+Please enter your Prolific ID. Your Prolific ID should consist of 24 alphanumeric characters.
 </p>
     {% formfields %}
     {% next_button %}
