--- a/oTree/timeoutblock/templates/timeoutblock/Timeoutblock.html
+++ b/oTree/timeoutblock/templates/timeoutblock/Timeoutblock.html
@@ -5,13 +5,11 @@
 {% block content %}
 <div id="alert-div" class="text-center alert alert-warning"> 
   <p>
-      You haven't responded during the time that was given to you.
-      Thus you will be not able to participate to the experiment.
+    You haven't responded during the time that was given to you. Thus you will not be able to participate in the experiment.
   </p>
 
   <p>
-      Thank you for your time. We hope you to participate in our future studies.
-
+    We hope you will participate in our future studies.
   </p>
 
 </div>
