--- a/oTree/captcha/templates/captcha/Captcha.html
+++ b/oTree/captcha/templates/captcha/Captcha.html
@@ -10,17 +10,22 @@
    .otree-timer {
        display: none;
    }
+
+   kbd {
+       background-color: #999999;  // Changes background color
+       text-color: #000000;                  // Changes text color
+   }
   </style>
 
   <div class="alert alert-primary">
     <p> This stage ends in:
-        <span style="font-weight: bold">
-          <span class="otree-timer__time-left"></span></br>
-After the time is up, you will be redirected to next stage.
-        </span>
+      <span style="font-weight: bold">
+        <span class="otree-timer__time-left"></span></br>
+        After the time is up, you will be redirected to next stage.
+      </span>
     </p>
-</div>
-<div class="alert alert-primary" id="alert_next_captcha" role="alert">
+  </div>
+  <div class="alert alert-primary" id="alert_next_captcha" role="alert">
     Submitted. Loading next captcha...
   </div>
   <style>
