--- a/oTree/captcha/templates/captcha/Results.html
+++ b/oTree/captcha/templates/captcha/Results.html
@@ -12,7 +12,7 @@
    };
   </script>
   <meta http-equiv="refresh" content="{{ session.config.results_page_redir_sec }}; url={{ session.config.completion_url }}" /> 
-
+ 
   {% if session.config.competition %}
     {% include "./res_competition.html" %}
   {% else %}
@@ -23,8 +23,8 @@
 
     <div align="center">
 
-  {% if player.is_dictator %} You were selected as the decision maker in your group. {% else %} 
-    You were not selected as the decision maker in your group. {% endif %}
+  {% if player.is_dictator %} You were selected as the decision-maker in your group. {% else %} 
+    You were not selected as the decision-maker in your group. {% endif %}
 
     <h3>
       You earned a bonus of  {{ player.payoff_after | c }} from this study.<br/>
@@ -33,7 +33,7 @@
 
 
     <p>
-      Thank you for participating our study.
+      Thank you for participating in our study.
     </p>
     <button id="myButton" type="button" class="btn btn-primary" onclick="finishExperiment()">Click to finish experiment</button>
     </div>
