--- a/oTree/instructions/templates/instructions/i1.html
+++ b/oTree/instructions/templates/instructions/i1.html
@@ -6,9 +6,9 @@
 <br>
 <p>Thank you for participating in our study. Please read the following instructions carefully.</p>
 <p>
-  The study will last roughly <strong>5 minutes</strong>. We kindly ask you to not to switch tabs during the experiment and turn off all sources of distraction (e. g., your mobile phone) so that you can concentrate on the task. 
+  The study will last roughly <strong>5 minutes</strong>. We kindly ask you not to switch tabs during the experiment and turn off all sources of distraction (e. g., your mobile phone) to concentrate on the task.
 </p>
-<p> In addition to the participation fee, during the task, <strong>you might earn money in GBP to be paid as bonus payment</strong>.</p>
+<p> In addition to the participation fee <strong>you might earn money in British Pounds(£) to be paid as bonus payment</strong> during the task.</p>
 
 
 
