--- a/oTree/instructions/templates/instructions/i3.html
+++ b/oTree/instructions/templates/instructions/i3.html
@@ -1,14 +1,16 @@
+{% load otree static %}
+
 <br>
 <div class="card-header bg-transparent mainheader">
   <h3 class="card-title font-weight-bold mt-3 mb-3">
-    The game consists three stages: Effort Stage, Decision Stage, and the Feedback Stage.
+    The game consists of three stages: the Effort Stage, the Decision Stage, and the Feedback Stage
 </h3>
 </div>
 
 <br>
 
 <ul>
-  <li><strong>Stage 1</strong>: In <strong>the effort stage</strong>, you will solve a task which would allow you to collect some money. The money you collected may or may not be included in the your final earnings from this experiment based on your or 
+  <li><strong>Stage 1</strong>: In <strong>the effort stage</strong>, you will solve a task which would allow you to collect some money. The money you collected may or may not be included in your final earnings from this experiment based on your or 
     {% if session.config.competition %}
       your competitors’
     {% else %}
@@ -23,7 +25,7 @@
     {% else %}
       other group members
     {% endif %}
-    will decide on whether to take some part of the collected money from
+    will decide whether to take some part of the collected money from
     {% if session.config.competition %}
       your competitors in the group.
     {% else %}
@@ -31,27 +33,20 @@
     {% endif %}
   </li>
 
-  <li><strong>Stage 3</strong>: In <strong>the feedback stage</strong> you will see the earnings
+  <li><strong>Stage 3</strong>: In <strong>the feedback stage</strong>, you will see the earnings
     {% if session.config.competition %}
       and the ranking of you and your competitors.
     {% else %}
       of you and other group members.
     {% endif %}
-
-    <div>
-    {% if session.config.competition %}
-         [SCREENSHOT COMP]
-    {% else %}
-      [SCREENSHOT CONT]
-    {% endif %}
-    </div>
-
-    <p>    In the next few pages we will explain the details and the potential earnings from these stages. </p>
-
-
-</li>
-
+  </li>
 </ul>
+<p>    In the following few pages, we will explain the details and the potential earnings from these stages. </p>
+
+
+
+
+
 
 
 
