language edit and small fixes

--- a/oTree/captcha/templates/captcha/Captcha.html
+++ b/oTree/captcha/templates/captcha/Captcha.html
@@ -21,7 +21,7 @@
     <p> This stage ends in:
       <span style="font-weight: bold">
         <span class="otree-timer__time-left"></span></br>
-        After the time is up, you will be redirected to next stage.
+        After the time is up, you will be redirected to the next stage.
       </span>
     </p>
   </div>
