--- a/oTree/instructions/templates/instructions/i4.html
+++ b/oTree/instructions/templates/instructions/i4.html
@@ -9,19 +9,19 @@
 
 <br>
 <p>
-  In this stage, you, and 
+  In this stage, you and 
   {% if session.config.competition %}
     your competitors
   {% else %}
     other group members
   {% endif %}
 
- will be shown a series of <strong>captchas</strong>, i.e. an image of a sequence of numbers and letters. You should try to input these letters in the given field. After each input, whether your entry was correct or not, you will be shown another captcha.
+ will be shown a series of <strong>captchas</strong>, i.e., an image of a sequence of numbers and letters. You should try to input these letters in the given field. After each input, whether your entry was correct or not, you will be shown another captcha.
 </p>
 
 <figure>
   <img id="effortimage" src="{% static 'instructions/effort_task.png' %}"><br>
-  <figurecaption> An example from the Effort Stage </figurecaption>
+  <figurecaption> <small>An screenshotfrom the Effort Stage. </small></figurecaption>
 </figure>
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
 
