--- a/oTree/instructions/templates/instructions/i5.html
+++ b/oTree/instructions/templates/instructions/i5.html
@@ -13,7 +13,7 @@
 </p>
 <figure>
   <img id="effortimage" src="{% static 'instructions/effort_task.png' %}"><br>
-  <figurecaption> An example from the Effort Stage </figurecaption>
+  <figurecaption> <small>A screenshot from the Effort Stage. </small></figurecaption>
 </figure>
 
 
