--- a/oTree/instructions/templates/instructions/i6.html
+++ b/oTree/instructions/templates/instructions/i6.html
@@ -9,9 +9,9 @@
 <p>
   Please note that earnings from this stage are not final payments. Your earnings will depend on your decision or the decision of one other
   {% if session.config.competition %}
-    competitors in your group.
+    competitor in your group.
   {% else %}
-    participants in your group.
+    participant in your group.
   {% endif %}
 
 </p>
