--- a/oTree/instructions/templates/instructions/i8.html
+++ b/oTree/instructions/templates/instructions/i8.html
@@ -9,7 +9,7 @@
 
 <br>
 <p>
-  In The Feedback Stage you  will see the final earnings 
+  In the Feedback Stage you  will see the final earnings 
   {% if session.config.competition %}
     and the ranking of you and your competitors.
   {% else %}
@@ -27,7 +27,7 @@
     {% else %}
       <img id="contimagesmall" src="{% static 'instructions/results_control.png' %}"><br>
     {% endif %}
-    <figcaption> <small>Screenshot from the Feedback stage. Payment information are concealed. Player names are an example.</small></figcaption>
+    <figcaption> <small>Screenshot from the Feedback stage. Payment information are concealed. The distribution of player names is an example.</small></figcaption>
   </figure>
 </div>
 
