--- a/oTree/notmatched/templates/notmatched/NotMatched.html
+++ b/oTree/notmatched/templates/notmatched/NotMatched.html
@@ -25,7 +25,7 @@ Please go do the Prolific completion page by clicking on the link below in order
 
 
 
-         <a href="{{ session.config.completion_url }}"> Click here to go to Prolific Redirection Page
+    <a href="{{ session.config.completion_url }}"> Click here to go to Prolific completion page </a>
 
 
   </div>
