--- a/oTree/instructions/templates/instructions/i7.html
+++ b/oTree/instructions/templates/instructions/i7.html
@@ -7,7 +7,7 @@
 
 <br>
 <p>
-  In The Decision Stage <strong>you will be offered the opportunity to take away a percentage (from 0 to 100%) of the group 
+  In the Decision Stage, <strong>you will be offered the opportunity to take away a percentage (from 0 to 100%) of the group 
   {% if session.config.competition %}
     competitors' 
   {% else %}
@@ -15,16 +15,16 @@
   {% endif %}
   earnings</strong>.</p>
 <p>
-  After the decision stage one participant in the group will be selected randomly as the decision-maker. The choice of the decisoin-maker will be implemented. Participants will not know which member is the decision-maker, but they will see the final outcome in the feedback stage.
+  After the decision stage, one participant in the group will be selected randomly as the decision-maker. Then, the choice of the decision-maker will be implemented. Participants will not know which member is the decision-maker, but they will see the final outcome in the feedback stage.
 </p>
 
 
-<strong> If you are selected as the "decision maker", the percentage you decide to take from other participants will be subtracted from the earnings of the other participants in your group, and will be added to your final earnings. </strong>
+<strong> If you are selected as the decision-maker, the percentage you decide to take from other participants will be subtracted from the earnings of the other participants in your group and will be added to your final earnings. </strong>
 </p>
 <ul>
   <li class="m-2">  Only one participant in the group will be selected as the decision-maker randomly. The choices by the others will not affect the final earnings. </li>
-  <li class="m-2"> The others will not know whether you are selected as the decision maker, or the percentage you have chosen.</li>
-  <li  class="m-2"> Only the final earnings will be visible in the results page{% if session.config.competition %} and they will determine the ranking of the players in the group{% endif %}.
+  <li class="m-2"> The others will not know whether you are selected as the decision-maker, or the chosen percentage.</li>
+  <li  class="m-2"> Only the final earnings will be visible on the results page{% if session.config.competition %}, and they will determine the ranking of the players in the group{% endif %}.
   </li>
 
 
